syntax = "proto3";

package m1.archi;
option java_package = "m1.archi.services";
option java_multiple_files = true;

import "models/agence.proto";
import "models/utilisateur.proto";
import "models/hotelModels/offre.proto";
import "models/hotelModels/reservation.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service AgenceService {
  rpc GetAllAgences (google.protobuf.Empty) returns (AgenceListResponse);
  rpc GetAllIdAgences (google.protobuf.Empty) returns (IdAgenceListResponse);
  rpc GetAgenceById (GetAgenceByIdRequest) returns (AgenceResponse);
  rpc CreateAgence (AgenceRequest) returns (AgenceResponse);
  rpc UpdateAgence (UpdateAgenceRequest) returns (AgenceResponse);
  rpc DeleteAgence (DeleteAgenceRequest) returns (google.protobuf.Empty);
  // Partie recherche et réservation
  rpc RechercherChambresById (RechercherChambresByIdRequest) returns (RechercherChambresResponse);
  rpc ReserverChambresHotel (ReserverChambresHotelRequest) returns (ReservationResponse);
  // Partie Utilisateur
  rpc FindUtilisateurById (FindUtilisateurByIdRequest) returns (UtilisateurResponse);
  rpc AddAgenceUtilisateur (AddAgenceUtilisateurRequest) returns (UtilisateurResponse);
}

message AgenceRequest {
  Agence agence = 1;
}

message AgenceListResponse {
  repeated Agence agences = 1;
}

message IdAgenceListResponse {
  repeated int64 idAgence = 1;
}

message AgenceResponse {
  Agence agence = 1;
}

message GetAgenceByIdRequest {
  int64 idAgence = 1;
}

message UpdateAgenceRequest {
  int64 idAgence = 1;
  Agence agence = 2;
}

message DeleteAgenceRequest {
  int64 idAgence = 1;
}


// Partie recherche et réservation
message RechercherChambresByIdRequest {
  int64 idAgence = 1;
  string ville = 2;
  google.protobuf.Timestamp dateArrivee = 3;
  google.protobuf.Timestamp dateDepart = 4;
  int32 prixMin = 5;
  int32 prixMax = 6;
  int32 nombreEtoiles = 7;
  int32 nombrePersonne = 8;
}

message RechercherChambresResponse {
  repeated Offre offre = 1;
}

message ReserverChambresHotelRequest {
  int64 idAgence = 1;
  string email = 2;
  string motDePasse = 3;
  int64 idHotel = 4;
  int64 idOffre = 5;
  bool petitDejeuner = 6;
  string nomClient = 7;
  string prenomClient = 8;
  string telephone = 9;
  string nomCarte = 10;
  string numeroCarte = 11;
  string expirationCarte = 12;
  string CCVCarte = 13;
}

message ReservationResponse {
  Reservation reservation = 1;
}


// Partie Utilisateur
message FindUtilisateurByIdRequest {
  int64 idAgence = 1;
  int64 idUtilisateur = 2;
}

message UtilisateurResponse {
  Utilisateur utilisateur = 1;
}

message AddAgenceUtilisateurRequest {
  int64 idAgence = 1;
  Utilisateur utilisateur = 2;
}
